--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
+#title{
+    text-align: center;
+}
 #image {
-    max-width: 100%;
+    max-width: 639px;
     height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
+#img-caption{
+    text-align: center;
+}
